<resources>
    <string name="app_name">AkurAndroid</string>
    <string name="login">Login</string>
    <string name="sign_in">Please sign-in to your account and start the adventure</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="new_on_our_platform">New on our platform?</string>
    <string name="create_an_account">Create an account</string>
    <string name="register">Register</string>
    <string name="sign_up_detail">Please sign-up your account</string>
    <string name="username">Username</string>
    <string name="agree">I agree to</string>
    <string name="privacy_policy_terms"><![CDATA[privacy policy & terms]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="term_of_service">By signing up, you agree to Photo\'s Terms of Service and Privacy Policy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="privacy_and_policy_content">
        Effective date: 2021-11-29\n\nUpdated on: 2021-11-29\n\nThis Privacy Policy explains the policies of Akur on the collection and use of the information we collect when you access www.akur.co.id (the “Service”). This Privacy Policy describes your privacy rights and how you are protected under privacy laws.\n\nBy using our Service, you are consenting to the collection and use of your information in accordance with this Privacy Policy. Please do not access or use our Service if you do not consent to the collection and use of your information as outlined in this Privacy Policy. This Privacy Policy has been created with the help of CookieScript Privacy Policy Generator.\n\nAkur is authorized to modify this Privacy Policy at any time. This may occur without prior notice.\n\nAkur will post the revised Privacy Policy on the www.akur.co.id website\n\nCollection and Use of Your Personal Information\nInformation We Collect\nWhen using our Service, you will be prompted to provide us with personal information used to contact or identify you. www.akur.co.id collects the following information:\n\nUsage Data\nUsage Data includes the following:\n\nInternet Protocol (IP) address of computers accessing the site\nWeb page requests\nReferring web pages\nBrowser used to access site\nTime and date of access\nHow We Collect Information\nwww.akur.co.id collects and receives information from you in the following manner:\n\nFrom external, public sources.\nYour information will be stored for up to 12 days after it is no longer required to provide you the services. Your information may be retained for longer periods for reporting or record- keeping in accordance with applicable laws. Information which does not identify you personally may be stored indefinitely.\n\nHow We Use Your Information\nwww.akur.co.id may use your information for the following purposes:\n\nProviding and maintaining our Service, as well as monitoring the usage of our Service.\nFor other purposes. Akur will use your information for data analysis to identify usage trends or determine the effective of our marketing campaigns when reasonable. We will use your information to evaluate and improve our Service, products, services, and marketing efforts.\nHow We Share Your Information\nAkur will share your information, when applicable, in the following situations:\n\nWith your consent. Akur will share your information for any purpose with your explicit consent.\nThird-party Sharing\nYour information may be disclosed for additional reasons, including:\n\nComplying with applicable laws, regulations, or court orders.\nResponding to claims that your use of our Service violates third-party rights.\nEnforcing agreements you make with us, including this Privacy Policy.\nCookies\nCookies are small text files that are placed on your computer by websites that you visit. Websites use cookies to help users navigate efficiently and perform certain functions. Cookies that are required for the website to operate properly are allowed to be set without your permission. All other cookies need to be approved before they can be set in the browser.\n\nStrictly necessary cookies. Strictly necessary cookies allow core website functionality such as user login and account management. The website cannot be used properly without strictly necessary cookies.\nSecurity\nYour information’s security is important to us. www.akur.co.id utilizes a range of security measures to prevent the misuse, loss, or alteration of the information you have given us. However, because we cannot guarantee the security of the information you provide us, you must access our service at your own risk.\n\nAkur is not responsible for the performance of websites operated by third parties or your interactions with them. When you leave this website, we recommend you review the privacy practices of other websites you interact with and determine the adequacy of those practices.\n\nContact Us\nFor any questions, please contact us through the following methods:\n\nName: Akur\n\nAddress: University of Indonesia\n\nEmail: akur.company@gmail.com\n\nWebsite: www.akur.co.id\n\nPhone: 088724873423\n\nFor any queries or concerns you have related to the processing of your information, you may contact our Privacy Officer at Bagus Nurhuda, bagusn05@gmail.com, 087888254504.
    </string>
</resources>