<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo_register"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_akur" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="35sp"
            android:textColor="@color/hijau_logo"
            android:fontFamily="@font/comfortaa"
            android:text="@string/register"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_register_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_detail"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/comfortaa"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/edt_username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_box"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="text"
        android:lines="1"
        tools:text="johndoe@gmail.com"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tv_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/edt_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_box"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        android:lines="1"
        tools:text="johndoe@gmail.com"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tv_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/edt_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_box"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:lines="1"
        tools:text="password"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <CheckBox
            android:id="@+id/checkbox_register"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tv_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:fontFamily="@font/comfortaa"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_terms"
            android:textColor="@color/hijau_logo"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/comfortaa"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/hijau_logo"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/tv_term_of_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/term_of_service"
        android:textSize="15sp"/>

</LinearLayout>