<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_akur" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="35sp"
            android:textColor="@color/hijau_logo"
            android:fontFamily="@font/comfortaa"
            android:text="@string/login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_login_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/comfortaa"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa"
        android:text="Username"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_box"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        android:lines="1"
        tools:text="johndoe@gmail.com"
        android:padding="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:text="@string/password"
            android:fontFamily="@font/comfortaa"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:fontFamily="@font/comfortaa"
            android:textSize="16sp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:textColor="@color/hijau_logo"/>
        <!--            android:onClick=""-->


    </RelativeLayout>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/stroke_box"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:lines="1"
        tools:text="password"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tv_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:fontFamily="@font/comfortaa"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/hijau_logo"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tv_new_on_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_on_our_platform"
            android:fontFamily="@font/comfortaa"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:fontFamily="@font/comfortaa"
            android:layout_marginStart="7dp"
            android:textColor="@color/hijau_logo"
            android:clickable="true"
            android:onClick="goToRegisterPage"
            tools:ignore="UsingOnClickInXml"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="TEST"/>

</LinearLayout>